Run code cleanup in Android Studio